tool: run rewrite recipe and update to remove voluntary upgrade to Jackson 3