@@ -13,14 +13,10 @@ import org.junit.Test;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.core.io.Resource;
-import org.junit.runner.RunWith;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit4.SpringRunner;
-
 import us.dot.its.jpo.geojsonconverter.pojos.spat.ProcessedSpat;
 
 @SpringBootTest({"processed.spat.json=classpath:json/sample.processed-spat.json"})
-@RunWith(SpringRunner.class)
 @ActiveProfiles("test")
 public class JsonDeserializerTest {
     @Test
@@ -98,6 +94,6 @@ class TestClass {
     }
 
     public String toString() {
-        return String.format("{\"prop\":\"%s\"}", prop);
+        return "{\"prop\":\"%s\"}".formatted(prop);
     }
 }
